--- a/jenkinsfile
+++ b/jenkinsfile
@@ -77,7 +77,7 @@ pipeline {
 	    					bat '''
 						cd target
 						ren *.war java.war
-	    					curl -T "java.war" "http://tomcat:tomcat@localhost:8084/manager/text/deploy?path=/myapp&update=true"
+	    					curl -T "java.war" "http://tomcat:tomcat@${env.TOMCAT_IP}:8084/manager/text/deploy?path=/shopingcart&update=true"
 	    					'''
 					        } else {
                                                         echo 'skipping the stage ${env.STAGE_NAME}.............................!'	    
