--- a/jenkinsfile
+++ b/jenkinsfile
@@ -77,7 +77,7 @@ pipeline {
 	    					bat '''
 						cd target
 						ren *.war java.war
-	    					curl -T "java.war" "http://tomcat:tomcat@${env.TOMCAT_IP}:8084/manager/text/deploy?path=/shopingcart&update=true"
+	    					curl -T "java.war" "http://tomcat:tomcat@${env.TOMCAT_IP}/manager/text/deploy?path=/shopingcart&update=true"
 	    					'''
 					        } else {
                                                         echo 'skipping the stage ${env.STAGE_NAME}.............................!'	    
@@ -130,7 +130,7 @@ pipeline {
                 script {
                     try {
 						if (env.DAST_IP != 'null') {		    
-                       arachniScanner checks: '*', format: 'html', url: 'http://mypublicip:8084/SpringMVCAnnotationShoppingCart/'
+                       arachniScanner checks: '*', format: 'html', url: 'http://${env.TOMCAT_IP}/shopingcart/'
 					        } else {
                                                         echo 'skipping the stage ${env.STAGE_NAME}.............................!'                       
              }       } catch (err) {
